fix order modal padding on small screen

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -287,6 +287,7 @@ label{
 	font-size: 12px;
 }
 .modal{
+	padding: 0 !important;
 	background: rgba(255, 255, 255, 0.75);
 }
 .order-modal .row{
